Refactory utilizando o Sonar